# vienna-weather-forecast-kg-pipeline

./: README.md
pipeline/: .gitignore  README.md  build.gradle  package-lock.json  package.json  pipeline.ttl  pyproject.toml
pipeline/resources/: Dockerfile  docker-compose.yml  mapping.rml.ttl  shacl-shape.ttl
processor/: LICENSE  README.md  pyproject.toml
processor/src/rdfc_template_processor/: processor.py  processor.ttl
processor/src/rdfc_translation_processor/: processor.py  processor.ttl
processor/tests/: processor_test.py
