[project]
name = "rdfc_template-processor"
version = "0.0.1"
description = "Template processor to kickstart the development of your next Python RDF-Connect processor."
authors = [
    { name = "Ieben Smessaert", email = "ieben.smessaert@ugent.be" }
]
readme = "README.md"
requires-python = ">= 3.12"
license = "MIT"
dependencies = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "rdfc-proto>=0.0.1",
    "rdfc-runner>=0.0.3",
]

[project.urls]
Homepage = "https://rdf-connect.github.io"
Repository = "https://github.com/rdf-connect/template-processor-py"
Issues = "https://github.com/rdf-connect/template-processor-/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rdfc_template_processor"]

[tool.hatch.envs.default]
type = "virtual"
path = ".venv"
system-packages = false
installer = "uv"
env-vars = { PYTHONPATH = "src" }

